--- a/index.html
+++ b/index.html
@@ -4,48 +4,121 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>บริจาคได้บุญ ลดหย่อนภาษี</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iR8C1X64WeKx3HpeT5s1d5J1nz5n0xJr0h0r1W3d2i4v7F5hXoxsMcsT1j" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>บริจาคได้บุญ ลดหย่อนภาษี</h1>
-        <nav>
-            <a href="index.html">หน้าหลัก</a>
-            <a href="#campaigns">แคมเปญบริจาค</a>
-            <a href="#about">เกี่ยวกับเรา</a>
-            <a href="#contact">ติดต่อเรา</a>
-        </nav>
-    </header>
-    <main>
-        <section id="hero">
-            <h2>ร่วมสร้างสังคมที่ดีขึ้นด้วยการบริจาค</h2>
-            <p>เลือกแคมเปญที่คุณสนใจเพื่อช่วยเหลือสังคมและลดหย่อนภาษี</p>
-        </section>
-        <section id="campaigns">
-            <h2>แคมเปญเด่น</h2>
-            <div class="campaign">
-                <img src="campaign1.jpg" alt="ช่วยเหลือภัยพิบัติ">
-                <h3>ช่วยเหลือภัยพิบัติ</h3>
-                <p>ช่วยเหลือผู้ประสบภัยน้ำท่วมในภาคใต้</p>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+        <div class="container">
+            <a class="navbar-brand" href="#">บริจาคได้บุญ</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="#hero">หน้าหลัก</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#campaigns">แคมเปญบริจาค</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#about">เกี่ยวกับเรา</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact">ติดต่อเรา</a></li>
+                </ul>
             </div>
-            <div class="campaign">
-                <img src="campaign2.jpg" alt="ทำนุบำรุงศาสนสถาน">
-                <h3>ทำนุบำรุงศาสนสถาน</h3>
-                <p>ร่วมสนับสนุนการพัฒนามัสยิดในชุมชน</p>
+        </div>
+    </nav>
+
+    <!-- Hero Section -->
+    <section id="hero" class="bg-primary text-white text-center py-5">
+        <div class="container">
+            <h2 class="display-4">ร่วมสร้างสังคมที่ดีขึ้นด้วยการบริจาค</h2>
+            <p class="lead">เลือกแคมเปญที่คุณสนใจเพื่อช่วยเหลือสังคมและลดหย่อนภาษี</p>
+            <a href="#campaigns" class="btn btn-light btn-lg">ดูแคมเปญบริจาค</a>
+        </div>
+    </section>
+
+    <!-- Campaigns Section -->
+    <section id="campaigns" class="py-5">
+        <div class="container">
+            <h2 class="text-center mb-5">แคมเปญบริจาค</h2>
+            <div class="row">
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="campaign1.jpg" class="card-img-top" alt="ช่วยเหลือภัยพิบัติ">
+                        <div class="card-body">
+                            <h5 class="card-title">ช่วยเหลือภัยพิบัติ</h5>
+                            <p class="card-text">ร่วมบริจาคเพื่อช่วยเหลือผู้ประสบภัยน้ำท่วมในภาคใต้</p>
+                            <a href="#" class="btn btn-success">บริจาคเลย</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="campaign2.jpg" class="card-img-top" alt="ทำนุบำรุงศาสนสถาน">
+                        <div class="card-body">
+                            <h5 class="card-title">ทำนุบำรุงศาสนสถาน</h5>
+                            <p class="card-text">ร่วมสนับสนุนการพัฒนามัสยิดในชุมชน</p>
+                            <a href="#" class="btn btn-success">บริจาคเลย</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="campaign3.jpg" class="card-img-top" alt="บริจาคเพื่อการศึกษา">
+                        <div class="card-body">
+                            <h5 class="card-title">บริจาคเพื่อการศึกษา</h5>
+                            <p class="card-text">ช่วยเหลือการศึกษาของเด็กๆ ในพื้นที่ห่างไกล</p>
+                            <a href="#" class="btn btn-success">บริจาคเลย</a>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </section>
-        <section id="about">
-            <h2>เกี่ยวกับเรา</h2>
-            <p>เรามุ่งมั่นในการรวบรวมแหล่งบริจาคที่สามารถลดหย่อนภาษีได้และช่วยสร้างสังคมที่ยั่งยืน</p>
-        </section>
-        <section id="contact">
-            <h2>ติดต่อเรา</h2>
-            <p>อีเมล: info@donation-site.com</p>
-            <p>โทร: 02-123-4567</p>
-        </section>
-    </main>
-    <footer>
-        <p>© 2024 บริจาคได้บุญ ลดหย่อนภาษี</p>
+        </div>
+    </section>
+
+    <!-- About Section -->
+    <section id="about" class="bg-light py-5">
+        <div class="container">
+            <h2 class="text-center mb-4">เกี่ยวกับเรา</h2>
+            <p class="lead text-center">เรามุ่งมั่นในการรวบรวมแหล่งบริจาคที่สามารถลดหย่อนภาษีได้และช่วยสร้างสังคมที่ยั่งยืน</p>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="py-5">
+        <div class="container">
+            <h2 class="text-center mb-4">ติดต่อเรา</h2>
+            <div class="row">
+                <div class="col-md-6">
+                    <p>อีเมล: <a href="mailto:info@donation-site.com">info@donation-site.com</a></p>
+                    <p>โทรศัพท์: 02-123-4567</p>
+                </div>
+                <div class="col-md-6">
+                    <form>
+                        <div class="mb-3">
+                            <label for="name" class="form-label">ชื่อ</label>
+                            <input type="text" class="form-control" id="name" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="email" class="form-label">อีเมล</label>
+                            <input type="email" class="form-control" id="email" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="message" class="form-label">ข้อความ</label>
+                            <textarea class="form-control" id="message" rows="4" required></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-success">ส่งข้อความ</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="bg-dark text-white text-center py-4">
+        <p>&copy; 2024 บริจาคได้บุญ ลดหย่อนภาษี | สงวนลิขสิทธิ์</p>
     </footer>
+
+    <!-- Bootstrap JS and dependencies -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz4fnFO9gybVYG9LrVxMsF02v3F3CzK8v8mHqSc2v4eXy8sYcb8fV9QmjF" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js" integrity="sha384-cu0FB9ZXDh16ZGqQmYnxXGg8J9G7l0I6CzF4tDsMCgXyVSoZJlZGXY4rP/z88ChF" crossorigin="anonymous"></script>
 </body>
 </html>
