--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>บริจาคได้บุญ ลดหย่อนภาษี</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iR8C1X64WeKx3HpeT5s1d5J1nz5n0xJr0h0r1W3d2i4v7F5hXoxsMcsT1j" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- Navbar -->
@@ -74,51 +73,5 @@
         </div>
     </section>
 
-    <!-- About Section -->
-    <section id="about" class="bg-light py-5">
-        <div class="container">
-            <h2 class="text-center mb-4">เกี่ยวกับเรา</h2>
-            <p class="lead text-center">เรามุ่งมั่นในการรวบรวมแหล่งบริจาคที่สามารถลดหย่อนภาษีได้และช่วยสร้างสังคมที่ยั่งยืน</p>
-        </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact" class="py-5">
-        <div class="container">
-            <h2 class="text-center mb-4">ติดต่อเรา</h2>
-            <div class="row">
-                <div class="col-md-6">
-                    <p>อีเมล: <a href="mailto:info@donation-site.com">info@donation-site.com</a></p>
-                    <p>โทรศัพท์: 02-123-4567</p>
-                </div>
-                <div class="col-md-6">
-                    <form>
-                        <div class="mb-3">
-                            <label for="name" class="form-label">ชื่อ</label>
-                            <input type="text" class="form-control" id="name" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="email" class="form-label">อีเมล</label>
-                            <input type="email" class="form-control" id="email" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="message" class="form-label">ข้อความ</label>
-                            <textarea class="form-control" id="message" rows="4" required></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-success">ส่งข้อความ</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Footer -->
-    <footer class="bg-dark text-white text-center py-4">
-        <p>&copy; 2024 บริจาคได้บุญ ลดหย่อนภาษี | สงวนลิขสิทธิ์</p>
-    </footer>
-
     <!-- Bootstrap JS and dependencies -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz4fnFO9gybVYG9LrVxMsF02v3F3CzK8v8mHqSc2v4eXy8sYcb8fV9QmjF" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js" integrity="sha384-cu0FB9ZXDh16ZGqQmYnxXGg8J9G7l0I6CzF4tDsMCgXyVSoZJlZGXY4rP/z88ChF" crossorigin="anonymous"></script>
-</body>
-</html>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz4fnFO9gybVYG9Lr
