--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>บริจาคได้บุญ ลดหย่อนภาษี</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iR8C1X64WeKx3HpeT5s1d5J1nz5n0xJr0h0r1W3d2i4v7F5hXoxsMcsT1j" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- Navbar -->
@@ -73,5 +74,13 @@
         </div>
     </section>
 
+    <!-- Footer -->
+    <footer class="bg-dark text-white text-center py-3">
+        <p>&copy; 2024 บริจาคได้บุญ | สร้างสังคมที่ดีด้วยการบริจาค</p>
+    </footer>
+
     <!-- Bootstrap JS and dependencies -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz4fnFO9gybVYG9Lr
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz4fnFO9gybVYG9LrVxMsF02v3F3CzK8v8mHqSc2v4eXy8sYcb8fV9QmjF" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js" integrity="sha384-cu0FB9ZXDh16ZGqQmYnxXGg8J9G7l0I6CzF4tDsMCgXyVSoZJlZGXY4rP/z88ChF" crossorigin="anonymous"></script>
+</body>
+</html>
