เพิ่ม Menu และ อีเมมล์ Contact.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>บริจาคได้บุญ ลดหย่อนภาษี</title>
+    <title>บริจาคได้บุญ และ ลดหย่อนภาษี</title>
     <script src="https://cdn.tailwindcss.com"></script> <!-- โหลด Tailwind CSS -->
 </head>
 <body class="bg-gray-100 text-gray-900 font-sans">
@@ -15,6 +15,7 @@
             <div class="space-x-4">
                 <a href="#hero" class="text-white">หน้าหลัก</a>
                 <a href="#campaigns" class="text-white">แคมเปญบริจาค</a>
+                <a href="#JointoTax" class="text-white">ตรวจสอบลดหย่อนออนไลน์</a>
                 <a href="#about" class="text-white">เกี่ยวกับเรา</a>
                 <a href="#contact" class="text-white">ติดต่อเรา</a>
             </div>
@@ -76,7 +77,7 @@
         <div class="container mx-auto text-center">
             <h2 class="text-3xl font-semibold mb-8">ติดต่อเรา</h2>
             <p class="text-lg">หากคุณมีข้อสงสัยหรือต้องการข้อมูลเพิ่มเติม กรุณาติดต่อเราที่:</p>
-            <a href="mailto:info@donationwebsite.com" class="mt-4 inline-block bg-blue-600 text-white py-2 px-6 rounded-lg">ส่งอีเมล์ถึงเรา</a>
+            <a href="mailto:Abdulloh.eg@gmail.com" class="mt-4 inline-block bg-blue-600 text-white py-2 px-6 rounded-lg">ส่งอีเมล์ถึงเรา</a>
         </div>
     </section>
 
