--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <!-- Campaign 1 -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                    <img src="./images/QAF.jpg" width="600" height="300" alt="แคมเปญ 1" class="w-full">
+                    <img src="./images/QAF.jpg" width="600" height="300" alt="QAF" class="w-full">
                     <div class="p-6">
                         <h3 class="text-xl font-semibold mb-4">ช่วยเหลือภัยพิบัติน้ำท่วมทางใต้โดยกลุ่ม QAF</h3>
                         <p class="text-gray-700 mb-6">ทีมงาน QAF อาสาลงพื้นที่เพื่อให้ความช่วยเหลือพี่น้องเรา</p>
@@ -45,19 +45,21 @@
                 </div>
                 <!-- Campaign 2 -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                    <img src="https://via.placeholder.com/600x300" alt="แคมเปญ 2" class="w-full">
+                    <img src="./images/MuslimSanti.jpg" alt="Muslim for Peace Foundation" class="w-full">
                     <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-4">ทำนุบำรุงศาสนสถาน</h3>
-                        <p class="text-gray-700 mb-6">ร่วมสนับสนุนการบูรณะมัสยิดในพื้นที่ชุมชน</p>
+                        <h3 class="text-xl font-semibold mb-4">ช่วยเหลือภัยพิบัติน้ำท่วมทางใต้โดย มูลนิธิมุสลิมเพื่อสันติ - Muslim for Peace Foundation</h3>
+                        <p class="text-gray-700 mb-6">อาสาลงพื้นที่เพื่อให้ความช่วยเหลือพี่น้องเรา</p>
                         <a href="campaign2.html" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
                     </div>
                 </div>
                 <!-- Campaign 3 -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                    <img src="https://via.placeholder.com/600x300" alt="แคมเปญ 3" class="w-full">
+                    <img src="./images/Islamic.jpg" alt="แคมเปญ 3" class="w-full">
                     <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-4">ช่วยเหลือการศึกษา</h3>
-                        <p class="text-gray-700 mb-6">สนับสนุนเด็กในพื้นที่ห่างไกลเพื่ออนาคตที่ดีขึ้น</p>
+                        <h3 class="text-xl font-semibold mb-4">วิกฤตน้ำท่วมภาคใต้ น้ำใจไทยไม่เคยทิ้งกัน</h3>
+                        <p class="text-gray-700 mb-6"> เชิญชวนพี่น้องทุกท่าน
+                            ร่วมส่งกำลังใจ และช่วยเหลือพี่น้องภาคใต้
+                            ที่กำลังได้รับความเดือดร้อนจากเหตุอุทกภัยน้ำท่วมในขณะนี้</p>
                         <a href="campaign3.html" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
                     </div>
                 </div>
