--- a/index.html
+++ b/index.html
@@ -66,6 +66,26 @@
             </div>
         </div>
     </section>
+    
+      <!-- Contact Section -->
+      <section id="contact" class="py-20">
+        <div class="container mx-auto text-center">
+            <h2 class="text-3xl font-semibold mb-8">ติดต่อเรา</h2>
+            <p class="text-lg">หากคุณมีข้อสงสัยหรือต้องการข้อมูลเพิ่มเติม กรุณาติดต่อเราที่:</p>
+            <a href="mailto:Abdulloh.eg@gmail.com" class="mt-4 inline-block bg-blue-600 text-white py-2 px-6 rounded-lg">ส่งอีเมล์ถึงเรา</a>
+        </div>
+    </section>
+
+     <!-- About Section -->
+     <section id="about" class="bg-gray-200 py-20">
+        <div class="container mx-auto text-center">
+            <h2 class="text-3xl font-semibold mb-8">เกี่ยวกับเรา</h2>
+            <p class="text-lg">เรามุ่งมั่นที่จะช่วยให้ทุกคนสามารถบริจาคเพื่อทำบุญและลดหย่อนภาษีได้ง่ายๆ ผ่านแคมเปญต่างๆ ที่คัดสรรมาสำหรับคุณ</p>
+        </div>
+    </section>
+
+  
+
 
     <!-- Footer -->
     <footer class="bg-gray-800 text-white py-6">
