--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         <div class="container mx-auto">
             <h1 class="text-4xl font-bold mb-4">บริจาคได้บุญ</h1>
             <p class="text-lg mb-6">ร่วมสนับสนุนและช่วยเหลือสังคมไปพร้อมกับเรา</p>
-            <a href="#campaigns" class="bg-white text-green-600 px-6 py-2 rounded-lg hover:bg-gray-200">ดูแคมเปญบริจาค</a>
+            <a href="#campaigns" class="bg-white text-green-600 px-6 py-2 rounded-lg hover:bg-gray-200">บริจาคช่วยเหลือน้ำท่วม</a>
+            <a href="#Masjid" class="bg-white text-green-600 px-6 py-2 rounded-lg hover:bg-gray-200">บริจาคสมทบทุนช่วยเหลือมัสยิด</a>
+            <a href="#Kampra" class="bg-white text-green-600 px-6 py-2 rounded-lg hover:bg-gray-200">บริจาคสมทบทุนช่วยเหลือเด็กกำพร้า</a>
         </div>
     </section>
 
@@ -66,7 +68,7 @@
             </div>
         </div>
     </section>
-    
+
       <!-- Contact Section -->
       <section id="contact" class="py-20">
         <div class="container mx-auto text-center">
