--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
             <a href="#" class="text-lg font-bold">บริจาคได้บุญ</a>
             <ul class="flex space-x-4">
                 <li><a href="#hero" class="hover:underline">หน้าหลัก</a></li>
-                <li><a href="#campaigns" class="hover:underline">แคมเปญบริจาค</a></li>
+                <li><a href="#campaigns" class="hover:underline">บริจาคช่วยเหลือน้ำท่วม</a></li>
+                <li><a href="#Masjid" class="hover:underline">บริจาคสมทบทุนช่วยเหลือมัสยิด</a></li>
+                <li><a href="#Kampra" class="hover:underline">บริจาคสมทบทุนช่วยเหลือเด็กกำพร้า</a></li>
                 <li><a href="#about" class="hover:underline">เกี่ยวกับเรา</a></li>
                 <li><a href="#contact" class="hover:underline">ติดต่อเรา</a></li>
             </ul>
