--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- Campaigns Section -->
     <section id="campaigns" class="py-20">
         <div class="container mx-auto">
-            <h2 class="text-3xl font-bold text-center mb-10">แคมเปญบริจาค</h2>
+            <h2 class="text-3xl font-bold text-center mb-10">บริจาคช่วยเหลือน้ำท่วมภาคใต้</h2>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <!-- Campaign 1 -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden">
