--- a/index.html
+++ b/index.html
@@ -58,18 +58,53 @@
                 </div>
                 <!-- Campaign 3 -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                    <img src="./images/Islamic.jpg" alt="แคมเปญ 3" class="w-full">
+                    <img src="./images/TarnNumJai.jpg" alt="วิกฤตน้ำท่วมภาคใต้ กลุ่มธารน้ำใจ ไม่เคยทิ้งกัน" class="w-full">
                     <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-4">วิกฤตน้ำท่วมภาคใต้ น้ำใจไทยไม่เคยทิ้งกัน</h3>
+                        <h3 class="text-xl font-semibold mb-4">วิกฤตน้ำท่วมภาคใต้ กลุ่มธารน้ำใจ ไม่เคยทิ้งกัน</h3>
                         <p class="text-gray-700 mb-6"> เชิญชวนพี่น้องทุกท่าน
                             ร่วมส่งกำลังใจ และช่วยเหลือพี่น้องภาคใต้
                             ที่กำลังได้รับความเดือดร้อนจากเหตุอุทกภัยน้ำท่วมในขณะนี้</p>
                         <a href="campaign3.html" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
                     </div>
                 </div>
+                <!-- Campaign 4 -->
+                <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+                    <img src="./images/Islamic.jpg" alt="แคมเปญ 3" class="w-full">
+                    <div class="p-6">
+                        <h3 class="text-xl font-semibold mb-4">วิกฤตน้ำท่วมภาคใต้ น้ำใจไทยไม่เคยทิ้งกัน</h3>
+                        <p class="text-gray-700 mb-6"> เชิญชวนพี่น้องทุกท่าน
+                            ร่วมส่งกำลังใจ และช่วยเหลือพี่น้องภาคใต้
+                            ที่กำลังได้รับความเดือดร้อนจากเหตุอุทกภัยน้ำท่วมในขณะนี้</p>
+                        <a href="campaign4.html" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
+                    </div>
+                </div>
+                <!-- Campaign 5 -->
+                <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+                    <img src="./images/Islamic.jpg" alt="แคมเปญ 3" class="w-full">
+                    <div class="p-6">
+                        <h3 class="text-xl font-semibold mb-4">วิกฤตน้ำท่วมภาคใต้ น้ำใจไทยไม่เคยทิ้งกัน</h3>
+                        <p class="text-gray-700 mb-6"> เชิญชวนพี่น้องทุกท่าน
+                            ร่วมส่งกำลังใจ และช่วยเหลือพี่น้องภาคใต้
+                            ที่กำลังได้รับความเดือดร้อนจากเหตุอุทกภัยน้ำท่วมในขณะนี้</p>
+                        <a href="campaign5.html" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
+                    </div>
+                </div>
+                <!-- Campaign 6 -->
+                <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+                    <img src="./images/Islamic.jpg" alt="แคมเปญ 3" class="w-full">
+                    <div class="p-6">
+                        <h3 class="text-xl font-semibold mb-4">วิกฤตน้ำท่วมภาคใต้ น้ำใจไทยไม่เคยทิ้งกัน</h3>
+                        <p class="text-gray-700 mb-6"> เชิญชวนพี่น้องทุกท่าน
+                            ร่วมส่งกำลังใจ และช่วยเหลือพี่น้องภาคใต้
+                            ที่กำลังได้รับความเดือดร้อนจากเหตุอุทกภัยน้ำท่วมในขณะนี้</p>
+                        <a href="campaign6.html" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
+    
+
 
       <!-- Contact Section -->
       <section id="contact" class="py-20">
