Add 3 Foundation in web

--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <!-- Campaign 1 -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                    <img src="./images/QAF.jpg" width="600" height="300" alt="QAF" class="w-full">
+                    <img src="./images/Islamic.jpg" width="600" height="300" alt="QAF" class="w-full">
                     <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-4">ช่วยเหลือภัยพิบัติน้ำท่วมทางใต้โดยกลุ่ม QAF</h3>
-                        <p class="text-gray-700 mb-6">ทีมงาน QAF อาสาลงพื้นที่เพื่อให้ความช่วยเหลือพี่น้องเรา</p>
-                        <a href="campaign1.html" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
+                        <h3 class="text-xl font-semibold mb-4">วิกฤตน้ำท่วมภาคใต้ น้ำใจไทยไม่เคยทิ้งกัน</h3>
+                        <p class="text-gray-700 mb-6">เชิญชวนพี่น้องทุกท่าน
+                            ร่วมส่งกำลังใจ และช่วยเหลือพี่น้องภาคใต้
+                            ที่กำลังได้รับความเดือดร้อนจากเหตุอุทกภัยน้ำท่วมในขณะนี้</p>
+                        <a href="campaign3.html" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
                     </div>
                 </div>
                 <!-- Campaign 2 -->
@@ -64,25 +66,23 @@
                         <p class="text-gray-700 mb-6"> เชิญชวนพี่น้องทุกท่าน
                             ร่วมส่งกำลังใจ และช่วยเหลือพี่น้องภาคใต้
                             ที่กำลังได้รับความเดือดร้อนจากเหตุอุทกภัยน้ำท่วมในขณะนี้</p>
-                        <a href="campaign3.html" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
+                        <a href="campaign4.html" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
                     </div>
                 </div>
                 <!-- Campaign 4 -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                    <img src="./images/Islamic.jpg" alt="แคมเปญ 3" class="w-full">
+                    <img src="./images/QAF.jpg" alt="แคมเปญ 3" class="w-full">
                     <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-4">วิกฤตน้ำท่วมภาคใต้ น้ำใจไทยไม่เคยทิ้งกัน</h3>
-                        <p class="text-gray-700 mb-6"> เชิญชวนพี่น้องทุกท่าน
-                            ร่วมส่งกำลังใจ และช่วยเหลือพี่น้องภาคใต้
-                            ที่กำลังได้รับความเดือดร้อนจากเหตุอุทกภัยน้ำท่วมในขณะนี้</p>
-                        <a href="campaign4.html" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
+                        <h3 class="text-xl font-semibold mb-4">ช่วยเหลือภัยพิบัติน้ำท่วมทางใต้โดยกลุ่ม QAF</h3>
+                        <p class="text-gray-700 mb-6"> ทีมงาน QAF อาสาลงพื้นที่เพื่อให้ความช่วยเหลือพี่น้องเรา</p>
+                        <a href="campaign1.html" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
                     </div>
                 </div>
                 <!-- Campaign 5 -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                    <img src="./images/Islamic.jpg" alt="แคมเปญ 3" class="w-full">
+                    <img src="./images/ForLive.jpg" alt="โครงการข้าวกล่องและถุงยังชีพ " class="w-full">
                     <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-4">วิกฤตน้ำท่วมภาคใต้ น้ำใจไทยไม่เคยทิ้งกัน</h3>
+                        <h3 class="text-xl font-semibold mb-4">โครงการข้าวกล่องและถุงยังชีพ </h3>
                         <p class="text-gray-700 mb-6"> เชิญชวนพี่น้องทุกท่าน
                             ร่วมส่งกำลังใจ และช่วยเหลือพี่น้องภาคใต้
                             ที่กำลังได้รับความเดือดร้อนจากเหตุอุทกภัยน้ำท่วมในขณะนี้</p>
@@ -91,9 +91,9 @@
                 </div>
                 <!-- Campaign 6 -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                    <img src="./images/Islamic.jpg" alt="แคมเปญ 3" class="w-full">
+                    <img src="./images/khonchuaykhon.jpg" alt="ปันน้ำใจช่วยเหลือ ผู้ประสบภัยน้ำท่วม" class="w-full">
                     <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-4">วิกฤตน้ำท่วมภาคใต้ น้ำใจไทยไม่เคยทิ้งกัน</h3>
+                        <h3 class="text-xl font-semibold mb-4">ปันน้ำใจช่วยเหลือ ผู้ประสบภัยน้ำท่วม</h3>
                         <p class="text-gray-700 mb-6"> เชิญชวนพี่น้องทุกท่าน
                             ร่วมส่งกำลังใจ และช่วยเหลือพี่น้องภาคใต้
                             ที่กำลังได้รับความเดือดร้อนจากเหตุอุทกภัยน้ำท่วมในขณะนี้</p>
