--- a/campaign4.html
+++ b/campaign4.html
@@ -23,26 +23,26 @@
             </p>
             <img src="./images/TarnNumJai.jpg" width="600" height="300" alt="แคมเปญ 1" class="w-full">
             <p class="text-gray-700 mb-4">
-                สถานการณ์น้ำท่วมในหลายพื้นที่ภาคใต้ มีพื้นที่ที่ได้รับผลกระทบโดยตรง ผู้คนไม่สามารถออกไปทำงานได้และมีฝนตกอย่างต่อเนื่องหลายวันทำให้น้ำยิ่งเพิ่มขึ้นอย่างน่าเป็นห่วง
+                <h1>สถานการณ์น้ำท่วมในหลายพื้นที่ภาคใต้ มีพื้นที่ที่ได้รับผลกระทบโดยตรง ผู้คนไม่สามารถออกไปทำงานได้และมีฝนตกอย่างต่อเนื่องหลายวันทำให้น้ำยิ่งเพิ่มขึ้นอย่างน่าเป็นห่วง</h1>
 
-📍ทางทีมงาน
-ชมรมธารน้ำใจแบ่งปันรอยยิ้ม
+📍ทางทีมงาน<br>
+ชมรมธารน้ำใจแบ่งปันรอยยิ้ม<br>
 เพจสะพานระหว่างพี่น้อง
-และTAG
+และTAG<br>
 
-ได้เปิดโอกาสให้ทุกๆท่านได้ร่วมกันบริจาคเพื่อช่วยพี่น้องของเราที่ได้รับผลกระทบจากน้ำท่วมในครั้งนี้ โดยเปิดรับบริจาคโอนผ่านบัญชี ธนาคารหรือบริจาคโดยตรง
-(ข้าวสารอาหารแห้งเครื่องอุปโภค)
+ได้เปิดโอกาสให้ทุกๆท่านได้ร่วมกันบริจาคเพื่อช่วยพี่น้องของเราที่ได้รับผลกระทบจากน้ำท่วมในครั้งนี้ <br>โดยเปิดรับบริจาคโอนผ่านบัญชี ธนาคารหรือบริจาคโดยตรง
+(ข้าวสารอาหารแห้งเครื่องอุปโภค)<br>
 
-📍ร่วมบริจาคได้ที่ ธนาคารกสิกรไทย
-เลขบัญชี 142-8-63716-6
-ชื่อบัญชี นางสาวมุสลีมะห์ ดอเล๊าะหะมะ
-(ผู้ระดมทุน)
+📍ร่วมบริจาคได้ที่ ธนาคารกสิกรไทย<br>
+เลขบัญชี 142-8-63716-6<br>
+ชื่อบัญชี นางสาวมุสลีมะห์ ดอเล๊าะหะมะ<br>
+(ผู้ระดมทุน)<br>
 
-สำหรับพี่น้องท่านใดที่สนใจอยากบริจาคเป็นสิ่งของอาหารแห้ง เช่น ข้าวสาร อาหารสำเร็จรูป อื่นๆ
+สำหรับพี่น้องท่านใดที่สนใจอยากบริจาคเป็นสิ่งของอาหารแห้ง เช่น ข้าวสาร อาหารสำเร็จรูป อื่นๆ<br>
 
-📍ติดต่อโทร : 0971098300 (นายญาดุลฮัก อูมุดี)
+📍ติดต่อโทร : 0971098300 (นายญาดุลฮัก อูมุดี)<br>
 
-📍ติดต่อทาง : เพจ ชมรมธารน้ำใจ แบ่งปันรอยยิ้ม
+📍ติดต่อทาง : เพจ ชมรมธารน้ำใจ แบ่งปันรอยยิ้ม<br>
 Instagram: @tnj_group<br>
 <a href="https://www.facebook.com/PW.TNB">Facebook : ธารน้ำใจ แบ่งปันรอยยิ้ม </a><br>
             </p>
