Change URL ThumImage

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
         <!-- Open Graph Meta Tags -->
         <meta property="og:title" content="บริจาคได้บุญ เพื่อพี่น้องเรา">
         <meta property="og:description" content="ร่วมสนับสนุนและช่วยเหลือสังคมไปพร้อมกับเราในแคมเปญช่วยเหลือภาคใต้ที่เดือดร้อนจากน้ำท่วม">
-        <meta property="og:image" content="./images/A_scene_of_volunteers_helping_flood_victims_1200x630.jpg">
-        <meta property="og:url" content="https://dekbacom.github.io/FaithfulGiving.github.io//">
+        <meta property="og:image" content="https://dekbacom.github.io/FaithfulGiving.github.io/images/A_scene_of_volunteers_helping_flood_victims_1200x630.jpg">
+        <meta property="og:url" content="https://dekbacom.github.io/FaithfulGiving.github.io/">
         <meta property="og:type" content="website">
     
         <!-- Twitter Card Meta Tags -->
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="บริจาคได้บุญ เพื่อพี่น้องเรา">
         <meta name="twitter:description" content="ร่วมสนับสนุนและช่วยเหลือสังคมไปพร้อมกับเราในแคมเปญช่วยเหลือภาคใต้ที่เดือดร้อนจากน้ำท่วม">
-        <meta name="twitter:image" content="./images/A_scene_of_volunteers_helping_flood_victims_1200x630.jpg">
+        <meta name="twitter:image" content="https://dekbacom.github.io/FaithfulGiving.github.io/images/A_scene_of_volunteers_helping_flood_victims_1200x630.jpg">
     
 
 </head>
