--- a/campaign9.html
+++ b/campaign9.html
@@ -17,17 +17,17 @@
     <!-- Campaign Details -->
     <section class="py-20">
         <div class="container mx-auto">
-            <h1 class="text-3xl font-bold mb-6">เชิญพี่น้องบริจาคช่วยภัยน้ำท่วมภาคใต้</h1>
+            <h1 class="text-3xl font-bold mb-6">เชิญพี่น้องบริจาคช่วยภัยน้ำท่วมภาคใต้ โดย กลุ่ม Fehrd Yala </h1>
             <p class="text-gray-700 mb-4">
                 ร่วมบริจาคเพื่อช่วยเหลือผู้ประสบภัยน้ำท่วมในภาคใต้ สนับสนุนทั้งอาหาร น้ำสะอาด และสิ่งจำเป็นในการดำรงชีวิต
-                ช่วยเหลือภัยพิบัติน้ำท่วมทางใต้ โดย ละหมาดต่างถิ่น 
+                ช่วยเหลือภัยพิบัติน้ำท่วมทางใต้ โดย เพจรอยยิ้ม ต่างถิ่น 
             </p>
-            <img src="./images/Namas.jpg" width="600" height="300" alt="แคมเปญ 1" class="w-full">
+            <img src="./images/FehrdYala.jpg" width="600" height="300" alt="แคมเปญ 1" class="w-full">
             <p class="text-gray-700 mb-4">
-                ช่วยเหลือภัยพิบัติน้ำท่วมทางใต้ โดย ละหมาดต่างถิ่น 
-                 <a href="https://www.facebook.com/photo?fbid=1118141119682888&set=a.208097840687225">ข้อมูลเพิ่มเติม</a>
+                ช่วยเหลือภัยพิบัติน้ำท่วมทางใต้ โดย เพจFehrd Yala <br>
+                 <a href="">ข้อมูลเพิ่มเติม</a>
             </p>
-            <a href="https://www.facebook.com/photo?fbid=1118141119682888&set=a.208097840687225" class="bg-green-500 text-white px-6 py-2 rounded-lg hover:bg-green-600">ร่วมบริจาค</a>
+            <a href="" class="bg-green-500 text-white px-6 py-2 rounded-lg hover:bg-green-600">ร่วมบริจาค</a>
         </div>
     </section>
 
