--- a/index.html
+++ b/index.html
@@ -118,22 +118,23 @@
                 </div>
                 <!-- Campaign 7 -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                    <img src="./images/QAF.jpg" alt="แคมเปญ 3" class="w-full">
+                    <img src="./images/Royyim.jpg" alt="บริจาคช่วยภัยน้ำท่วมภาคใต้ โดย เพจรอยยิ้ม ต่างถิ่น" class="w-full">
                     <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-4">ช่วยเหลือภัยพิบัติน้ำท่วมทางใต้โดยกลุ่ม QAF</h3>
-                        <p class="text-gray-700 mb-6"> ทีมงาน QAF อาสาลงพื้นที่เพื่อให้ความช่วยเหลือพี่น้องเรา</p>
-                        <a href="campaign1.html" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
+                        <h3 class="text-xl font-semibold mb-4">บริจาคช่วยภัยน้ำท่วมภาคใต้ โดย เพจรอยยิ้ม ต่างถิ่น</h3>
+                        <p class="text-gray-700 mb-6"> ขอเชิญชวน พี่น้อง ที่ อยากร่วมสมทบ ช่วยเหลือ ให้กับ 
+                            ผู้ที่ประสบภัยน้ำท่วม โซน  ปัตตานี ยะลา นราธิวาส และ สงขลาบางพื้นที่  </p>
+                        <a href="campaign8.html" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
                     </div>
                 </div>
                 <!-- Campaign 8 -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                    <img src="./images/ForLive.jpg" alt="โครงการข้าวกล่องและถุงยังชีพ " class="w-full">
+                    <img src="./images/FehrdYala.jpg" alt="โครงการข้าวกล่องและถุงยังชีพ กลุ่ม Fehrd Yala" class="w-full">
                     <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-4">โครงการข้าวกล่องและถุงยังชีพ </h3>
+                        <h3 class="text-xl font-semibold mb-4">โครงการข้าวกล่องและถุงยังชีพ โดยกลุ่ม Fehrd Yala  </h3>
                         <p class="text-gray-700 mb-6"> เชิญชวนพี่น้องทุกท่าน
                             ร่วมส่งกำลังใจ และช่วยเหลือพี่น้องภาคใต้
                             ที่กำลังได้รับความเดือดร้อนจากเหตุอุทกภัยน้ำท่วมในขณะนี้</p>
-                        <a href="campaign5.html" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
+                        <a href="campaign9.html" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
                     </div>
                 </div>
                 <!-- Campaign 9 -->
