Chage Poster RoyYim

--- a/campaign7.html
+++ b/campaign7.html
@@ -22,7 +22,7 @@
                 ร่วมบริจาคเพื่อช่วยเหลือผู้ประสบภัยน้ำท่วมในภาคใต้ สนับสนุนทั้งอาหาร น้ำสะอาด และสิ่งจำเป็นในการดำรงชีวิต
                 ช่วยเหลือภัยพิบัติน้ำท่วมทางใต้ โดย ละหมาดต่างถิ่น 
             </p>
-            <img src="./images/Namas.jpg" width="600" height="300" alt="แคมเปญ 1" class="w-full">
+            <img src="./images/Namas.jpg" width="600" height="300" alt="โดย ละหมาดต่างถิ่น" class="w-full">
             <p class="text-gray-700 mb-4">
                 ช่วยเหลือภัยพิบัติน้ำท่วมทางใต้ โดย ละหมาดต่างถิ่น 
                  <a href="https://www.facebook.com/photo?fbid=1118141119682888&set=a.208097840687225">ข้อมูลเพิ่มเติม</a>
