--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <!-- Campaign 1 -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                    <img src="./images/Islamic.jpg" width="600" height="300" alt="QAF" class="w-full">
+                    <img src="./images/Islamic.jpg" width="600" height="300" alt="วิกฤตน้ำท่วมภาคใต้ น้ำใจไทยไม่เคยทิ้งกัน" class="w-full">
                     <div class="p-6">
                         <h3 class="text-xl font-semibold mb-4">วิกฤตน้ำท่วมภาคใต้ น้ำใจไทยไม่เคยทิ้งกัน</h3>
                         <p class="text-gray-700 mb-6">เชิญชวนพี่น้องทุกท่าน
@@ -67,7 +67,7 @@
                 </div>
                 <!-- Campaign 2 -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                    <img src="./images/Namas.jpg" alt="ละหมาดต่างถิ่น" class="w-full">
+                    <img src="./images/Namas.jpg" width="600" height="300" alt="ละหมาดต่างถิ่น" class="w-full">
                     <div class="p-6">
                         <h3 class="text-xl font-semibold mb-4">ช่วยเหลือภัยพิบัติน้ำท่วมทางใต้โดย ละหมาดต่างถิ่น</h3>
                         <p class="text-gray-700 mb-6">อาสาลงพื้นที่เพื่อให้ความช่วยเหลือพี่น้องเรา</p>
