--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
                 <li><a href="#hero" class="hover:underline">หน้าหลัก</a></li>
                 <li><a href="#campaigns" class="hover:underline">บริจาคช่วยเหลือน้ำท่วม</a></li>
                 <li><a href="#Masjid" class="hover:underline">บริจาคสมทบทุนช่วยเหลือมัสยิด</a></li>
-                <li><a href="#Kampra" class="hover:underline">บริจาคสมทบทุนช่วยเหลือเด็กกำพร้า</a></li>
+                <li><a href="https://ilikeit.info/%E0%B8%9A%E0%B8%A3%E0%B8%B4%E0%B8%88%E0%B8%B2%E0%B8%84%E0%B8%AD%E0%B8%A2%E0%B9%88%E0%B8%B2%E0%B8%87%E0%B9%84%E0%B8%A3-%E0%B9%84%E0%B8%94%E0%B9%89%E0%B8%9A%E0%B8%B8%E0%B8%8D-%E0%B9%84%E0%B8%94%E0%B9%89%E0%B8%A5%E0%B8%94%E0%B8%A0%E0%B8%B2%E0%B8%A9%E0%B8%B5-74040c0aecd7" class="hover:underline">บริจาคอย่างไร ได้บุญ++ได้ลดภาษี </a></li>
+                <li><a href="https://epayapp.rd.go.th/rd-edonation/portal/qr-code" class="hover:underline">บริจาคผ่านQRอย่าไรได้ลดหย่อนภาษี</a></li>
                 <li><a href="#about" class="hover:underline">เกี่ยวกับเรา</a></li>
                 <li><a href="#contact" class="hover:underline">ติดต่อเรา</a></li>
             </ul>
@@ -165,7 +166,7 @@
      <section id="about" class="bg-gray-200 py-20">
         <div class="container mx-auto text-center">
             <h2 class="text-3xl font-semibold mb-8">เกี่ยวกับเรา</h2>
-            <p class="text-lg">เรามุ่งมั่นที่จะช่วยให้ทุกคนสามารถบริจาคเพื่อทำบุญและลดหย่อนภาษีได้ง่ายๆ ผ่านแคมเปญต่างๆ ที่คัดสรรมาสำหรับคุณ</p>
+            <p class="text-lg">เรามุ่งมั่นที่จะช่วยให้ทุกคนสามารถบริจาคเพื่อทำบุญและลดหย่อนภาษีได้ง่ายๆ ผ่านแคมเปญต่างๆ ที่คัดสรรมาสำหรับคุณสำหรับผู้ที่นับถือศาสนาอิสลาม</p>
         </div>
     </section>
 
