Add Sugaikolok Hospital

--- a/campaign7.html
+++ b/campaign7.html
@@ -17,17 +17,16 @@
     <!-- Campaign Details -->
     <section class="py-20">
         <div class="container mx-auto">
-            <h1 class="text-3xl font-bold mb-6">เชิญพี่น้องบริจาคช่วยภัยน้ำท่วมภาคใต้</h1>
+            <h1 class="text-3xl font-bold mb-6">บริจจาคให้ โรงพยาบาลสุไหงโก-ลก ลดหย่อน 2 เท่า</h1>
             <p class="text-gray-700 mb-4">
-                ร่วมบริจาคเพื่อช่วยเหลือผู้ประสบภัยน้ำท่วมในภาคใต้ สนับสนุนทั้งอาหาร น้ำสะอาด และสิ่งจำเป็นในการดำรงชีวิต
-                ช่วยเหลือภัยพิบัติน้ำท่วมทางใต้ โดย ละหมาดต่างถิ่น 
+                ท่านสามารถบริจาคให้กับโรงพยาบาลสุไหงโก-ลกได้ลดหย่อนภาษี2เท่า ไม่เกิน 10% ของรายได้หลังหักค่าใช้จ่ายและลดหย่อนอื่น ๆ
             </p>
-            <img src="./images/Namas.jpg" width="600" height="300" alt="โดย ละหมาดต่างถิ่น" class="w-full">
+            <img src="./images/Sungaikolok-Hospital-QRCode.jpg" width="70%" height="70%" alt="โดย ละหมาดต่างถิ่น" class="w-full">
             <p class="text-gray-700 mb-4">
-                ช่วยเหลือภัยพิบัติน้ำท่วมทางใต้ โดย ละหมาดต่างถิ่น 
-                 <a href="https://www.facebook.com/photo?fbid=1118141119682888&set=a.208097840687225">ข้อมูลเพิ่มเติม</a>
+                โรงพยาบาลนี้เป็นส่วนหนึ่งที่เราเลือกแต่ยังมีอีกหลายที่ท่านสามารถดูข้อมูลเพิ่มเติมได้ที่
+                 <a href="https://ilikeit.info/%E0%B8%9A%E0%B8%A3%E0%B8%B4%E0%B8%88%E0%B8%B2%E0%B8%84%E0%B8%AD%E0%B8%A2%E0%B9%88%E0%B8%B2%E0%B8%87%E0%B9%84%E0%B8%A3-%E0%B9%84%E0%B8%94%E0%B9%89%E0%B8%9A%E0%B8%B8%E0%B8%8D-%E0%B9%84%E0%B8%94%E0%B9%89%E0%B8%A5%E0%B8%94%E0%B8%A0%E0%B8%B2%E0%B8%A9%E0%B8%B5-74040c0aecd7">ข้อมูลเพิ่มเติม</a>
             </p>
-            <a href="https://www.facebook.com/photo?fbid=1118141119682888&set=a.208097840687225" class="bg-green-500 text-white px-6 py-2 rounded-lg hover:bg-green-600">ร่วมบริจาค</a>
+            <a href="https://www.scb.co.th/th/personal-banking/other-services/e-donation/e-donationqr.html?page=h63" class="bg-green-500 text-white px-6 py-2 rounded-lg hover:bg-green-600">ร่วมบริจาค</a>
         </div>
     </section>
 
