--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <a href="#" class="text-lg font-bold">บริจาคได้บุญ</a>
             <ul class="flex space-x-4">
                 <li><a href="#hero" class="hover:underline">หน้าหลัก</a></li>
-                <li><a href="#campaigns" class="hover:underline">บริจาคช่วยเหลือน้ำท่วม</a></li>
-                <li><a href="#Masjid" class="hover:underline">บริจาคสมทบทุนช่วยเหลือมัสยิด</a></li>
+                <li><a href="#campaigns" class="hover:underline">บริจาคได้ลดหย่อน2เท่า</a></li>
+                <li><a href="https://efiling.rd.go.th/rd-efiling-web/authen/DNT3" class="hover:underline">ตรวจสอบข้อมูลการบริจาค</a></li>
                 <li><a href="https://ilikeit.info/%E0%B8%9A%E0%B8%A3%E0%B8%B4%E0%B8%88%E0%B8%B2%E0%B8%84%E0%B8%AD%E0%B8%A2%E0%B9%88%E0%B8%B2%E0%B8%87%E0%B9%84%E0%B8%A3-%E0%B9%84%E0%B8%94%E0%B9%89%E0%B8%9A%E0%B8%B8%E0%B8%8D-%E0%B9%84%E0%B8%94%E0%B9%89%E0%B8%A5%E0%B8%94%E0%B8%A0%E0%B8%B2%E0%B8%A9%E0%B8%B5-74040c0aecd7" class="hover:underline">บริจาคอย่างไร ได้บุญ++ได้ลดภาษี </a></li>
                 <li><a href="https://epayapp.rd.go.th/rd-edonation/portal/qr-code" class="hover:underline">บริจาคผ่านQRอย่าไรได้ลดหย่อนภาษี</a></li>
                 <li><a href="#about" class="hover:underline">เกี่ยวกับเรา</a></li>
@@ -44,7 +44,7 @@
         <div class="container mx-auto">
             <h1 class="text-4xl font-bold mb-4">บริจาคได้บุญ</h1>
             <p class="text-lg mb-6">ร่วมสนับสนุนและช่วยเหลือสังคมไปพร้อมกับเรา</p>
-            <a href="#campaigns" class="bg-white text-green-600 px-6 py-2 rounded-lg hover:bg-gray-200">บริจาคช่วยเหลือน้ำท่วม</a>
+            <a href="#campaigns" class="bg-white text-green-600 px-6 py-2 rounded-lg hover:bg-gray-200">บริจาคได้ลดหย่อนภาษี2เท่า</a>
             <a href="#Masjid" class="bg-white text-green-600 px-6 py-2 rounded-lg hover:bg-gray-200">บริจาคสมทบทุนช่วยเหลือมัสยิด</a>
             <a href="#Kampra" class="bg-white text-green-600 px-6 py-2 rounded-lg hover:bg-gray-200">บริจาคสมทบทุนช่วยเหลือเด็กกำพร้า</a>
         </div>
@@ -63,15 +63,15 @@
                         <p class="text-gray-700 mb-6">เชิญชวนพี่น้องทุกท่าน
                             ร่วมส่งกำลังใจ และช่วยเหลือพี่น้องภาคใต้
                             ที่กำลังได้รับความเดือดร้อนจากเหตุอุทกภัยน้ำท่วมในขณะนี้</p>
-                        <a href="campaign3.html" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
+                        <a href="#" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
                     </div>
                 </div>
                 <!-- Campaign 2 -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                    <img src="./images/Namas.jpg" width="600" height="300" alt="ละหมาดต่างถิ่น" class="w-full">
+                    <img src="./images/Sungaikolok-Hospital.jpg" width="600" height="300" alt="โรงพยาบาลสุไหงโก-ลก" class="w-full">
                     <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-4">ช่วยเหลือภัยพิบัติน้ำท่วมทางใต้โดย ละหมาดต่างถิ่น</h3>
-                        <p class="text-gray-700 mb-6">อาสาลงพื้นที่เพื่อให้ความช่วยเหลือพี่น้องเรา</p>
+                        <h3 class="text-xl font-semibold mb-4">บริจจาคให้ โรงพยาบาลสุไหงโก-ลก ลดหย่อน 2 เท่า</h3>
+                        <p class="text-gray-700 mb-6">ท่านสามารถบริจาคให้กับโรงพยาบาลสุไหงโก-ลกได้ลดหย่อนภาษี2เท่า ไม่เกิน 10% ของรายได้หลังหักค่าใช้จ่ายและลดหย่อนอื่น ๆ</p>
                         <a href="campaign7.html" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
                     </div>
                 </div>
@@ -83,7 +83,7 @@
                         <p class="text-gray-700 mb-6"> เชิญชวนพี่น้องทุกท่าน
                             ร่วมส่งกำลังใจ และช่วยเหลือพี่น้องภาคใต้
                             ที่กำลังได้รับความเดือดร้อนจากเหตุอุทกภัยน้ำท่วมในขณะนี้</p>
-                        <a href="campaign4.html" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
+                        <a href="#" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
                     </div>
                 </div>
                 <!-- Campaign 4 -->
@@ -92,7 +92,7 @@
                     <div class="p-6">
                         <h3 class="text-xl font-semibold mb-4">ช่วยเหลือภัยพิบัติน้ำท่วมทางใต้โดยกลุ่ม QAF</h3>
                         <p class="text-gray-700 mb-6"> ทีมงาน QAF อาสาลงพื้นที่เพื่อให้ความช่วยเหลือพี่น้องเรา</p>
-                        <a href="campaign1.html" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
+                        <a href="#" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
                     </div>
                 </div>
                 <!-- Campaign 5 -->
@@ -103,7 +103,7 @@
                         <p class="text-gray-700 mb-6"> เชิญชวนพี่น้องทุกท่าน
                             ร่วมส่งกำลังใจ และช่วยเหลือพี่น้องภาคใต้
                             ที่กำลังได้รับความเดือดร้อนจากเหตุอุทกภัยน้ำท่วมในขณะนี้</p>
-                        <a href="campaign5.html" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
+                        <a href="#" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
                     </div>
                 </div>
                 <!-- Campaign 6 -->
@@ -114,7 +114,7 @@
                         <p class="text-gray-700 mb-6"> เชิญชวนพี่น้องทุกท่าน
                             ร่วมส่งกำลังใจ และช่วยเหลือพี่น้องภาคใต้
                             ที่กำลังได้รับความเดือดร้อนจากเหตุอุทกภัยน้ำท่วมในขณะนี้</p>
-                        <a href="campaign6.html" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
+                        <a href="#" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
                     </div>
                 </div>
                 <!-- Campaign 7 -->
@@ -124,7 +124,7 @@
                         <h3 class="text-xl font-semibold mb-4">บริจาคช่วยภัยน้ำท่วมภาคใต้ โดย เพจรอยยิ้ม ต่างถิ่น</h3>
                         <p class="text-gray-700 mb-6"> ขอเชิญชวน พี่น้อง ที่ อยากร่วมสมทบ ช่วยเหลือ ให้กับ 
                             ผู้ที่ประสบภัยน้ำท่วม โซน  ปัตตานี ยะลา นราธิวาส และ สงขลาบางพื้นที่  </p>
-                        <a href="campaign8.html" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
+                        <a href="#" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
                     </div>
                 </div>
                 <!-- Campaign 8 -->
@@ -135,7 +135,7 @@
                         <p class="text-gray-700 mb-6"> เชิญชวนพี่น้องทุกท่าน
                             ร่วมส่งกำลังใจ และช่วยเหลือพี่น้องภาคใต้
                             ที่กำลังได้รับความเดือดร้อนจากเหตุอุทกภัยน้ำท่วมในขณะนี้</p>
-                        <a href="campaign9.html" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
+                        <a href="#" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
                     </div>
                 </div>
                 <!-- Campaign 9 -->
@@ -144,7 +144,7 @@
                     <div class="p-6">
                         <h3 class="text-xl font-semibold mb-4">ช่วยเหลือภัยพิบัติน้ำท่วมทางใต้โดย มูลนิธิมุสลิมเพื่อสันติ - Muslim for Peace Foundation</h3>
                         <p class="text-gray-700 mb-6"> อาสาลงพื้นที่เพื่อให้ความช่วยเหลือพี่น้องเรา</p>
-                        <a href="campaign2.html" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
+                        <a href="#" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
                     </div>
                 </div>
             </div>
