--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <!-- Campaigns Section -->
     <section id="campaigns" class="py-20">
         <div class="container mx-auto">
-            <h2 class="text-3xl font-bold text-center mb-10">บริจาคช่วยเหลือน้ำท่วมภาคใต้</h2>
+            <h2 class="text-3xl font-bold text-center mb-10">บริจาคช่วยเหลืออิ่มบุญและลดหย่อนภาษี</h2>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <!-- Campaign 1 -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden">
@@ -70,7 +70,7 @@
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden">
                     <img src="./images/Sungaikolok-Hospital.jpg" width="600" height="300" alt="โรงพยาบาลสุไหงโก-ลก" class="w-full">
                     <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-4">บริจจาคให้ โรงพยาบาลสุไหงโก-ลก ลดหย่อน 2 เท่า</h3>
+                        <h3 class="text-xl font-semibold mb-4">บริจาคให้ โรงพยาบาลสุไหงโก-ลก ลดหย่อน 2 เท่า</h3>
                         <p class="text-gray-700 mb-6">ท่านสามารถบริจาคให้กับโรงพยาบาลสุไหงโก-ลกได้ลดหย่อนภาษี2เท่า ไม่เกิน 10% ของรายได้หลังหักค่าใช้จ่ายและลดหย่อนอื่น ๆ</p>
                         <a href="campaign7.html" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
                     </div>
