--- a/campaign7.html
+++ b/campaign7.html
@@ -17,11 +17,11 @@
     <!-- Campaign Details -->
     <section class="py-20">
         <div class="container mx-auto">
-            <h1 class="text-3xl font-bold mb-6">บริจจาคให้ โรงพยาบาลสุไหงโก-ลก ลดหย่อน 2 เท่า</h1>
+            <h1 class="text-3xl font-bold mb-6">บริจาคให้ โรงพยาบาลสุไหงโก-ลก ลดหย่อน 2 เท่า</h1>
             <p class="text-gray-700 mb-4">
                 ท่านสามารถบริจาคให้กับโรงพยาบาลสุไหงโก-ลกได้ลดหย่อนภาษี2เท่า ไม่เกิน 10% ของรายได้หลังหักค่าใช้จ่ายและลดหย่อนอื่น ๆ
             </p>
-            <img src="./images/Sungaikolok-Hospital-QRCode.jpg" width="70%" height="70%" alt="โดย ละหมาดต่างถิ่น" class="w-full">
+            <img src="./images/Sungaikolok-Hospital-QRCode.jpg" width="80%"" height="80%"" alt="บริจาคให้ โรงพยาบาลสุไหงโก-ลก ลดหย่อน 2 เท่า" >
             <p class="text-gray-700 mb-4">
                 โรงพยาบาลนี้เป็นส่วนหนึ่งที่เราเลือกแต่ยังมีอีกหลายที่ท่านสามารถดูข้อมูลเพิ่มเติมได้ที่
                  <a href="https://ilikeit.info/%E0%B8%9A%E0%B8%A3%E0%B8%B4%E0%B8%88%E0%B8%B2%E0%B8%84%E0%B8%AD%E0%B8%A2%E0%B9%88%E0%B8%B2%E0%B8%87%E0%B9%84%E0%B8%A3-%E0%B9%84%E0%B8%94%E0%B9%89%E0%B8%9A%E0%B8%B8%E0%B8%8D-%E0%B9%84%E0%B8%94%E0%B9%89%E0%B8%A5%E0%B8%94%E0%B8%A0%E0%B8%B2%E0%B8%A9%E0%B8%B5-74040c0aecd7">ข้อมูลเพิ่มเติม</a>
