--- a/Sungaikolok-Hospital.html
+++ b/Sungaikolok-Hospital.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>บริจาคได้บุญ เพื่อพี่น้องเรา</title>
+    <title>บริจาคให้ โรงพยาบาลสุไหงโก-ลก ลดหย่อน 2 เท่า</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100">
@@ -21,6 +21,7 @@
             <p class="text-gray-700 mb-4">
                 ท่านสามารถบริจาคให้กับโรงพยาบาลสุไหงโก-ลกได้ลดหย่อนภาษี2เท่า ไม่เกิน 10% ของรายได้หลังหักค่าใช้จ่ายและลดหย่อนอื่น ๆ
             </p>
+            <img src="./images/Sungaikolok-Hospital.jpg" width="80%"" height="80%"" alt="บริจาคให้ โรงพยาบาลสุไหงโก-ลก ลดหย่อน 2 เท่า" ><br>
             <img src="./images/Sungaikolok-Hospital-QRCode.jpg" width="80%"" height="80%"" alt="บริจาคให้ โรงพยาบาลสุไหงโก-ลก ลดหย่อน 2 เท่า" >
             <p class="text-gray-700 mb-4">
                 โรงพยาบาลนี้เป็นส่วนหนึ่งที่เราเลือกแต่ยังมีอีกหลายที่ท่านสามารถดูข้อมูลเพิ่มเติมได้ที่
