--- a/index.html
+++ b/index.html
@@ -168,8 +168,17 @@
                     <img src="./images/Pattani-Hospital.jpg" width="600" height="300" alt="โรงพยาบาลปัตตานี" class="w-full">
                     <div class="p-6">
                         <h3 class="text-xl font-semibold mb-4">บริจาคให้โรงพยาบาลปัตตานี ลดหย่อนภาษีได้ 2 เท่า</h3>
-                        <p class="text-gray-700 mb-6">ท่านสามารถบริจาคให้กับโรงพยาบาลปัตตานี เพื่อจัดซื้ออุปกรณ์การแพทย์</p>
+                        <p class="text-gray-700 mb-6">ท่านสามารถบริจาคให้กับโรงพยาบาลปัตตานี เพื่อจัดซื้ออุปกรณ์การแพทย์ ได้ลดหย่อนภาษี2เท่า ไม่เกิน 10% ของรายได้หลังหักค่าใช้จ่ายและลดหย่อนอื่น ๆ</p>
                         <a href="Pattani-Hospital.html" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
+                    </div>
+                </div>
+                <!-- Campaign 3 -->
+                <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+                    <img src="./images/Betong-Hospital.jpg" width="600" height="300" alt="โรงพยาบาลเบตง" class="w-full">
+                    <div class="p-6">
+                        <h3 class="text-xl font-semibold mb-4">บริจาคให้โรงพยาบาลเบตงลดหย่อนภาษีได้ 2 เท่า</h3>
+                        <p class="text-gray-700 mb-6">ท่านสามารถบริจาคให้กับโรงพยาบาลเบตง เพื่อจัดซื้ออุปกรณ์การแพทย์ ได้ลดหย่อนภาษี2เท่า ไม่เกิน 10% ของรายได้หลังหักค่าใช้จ่ายและลดหย่อนอื่น ๆ</p>
+                        <a href="Betong-Hospital.html" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
                     </div>
                 </div>
                 
