--- a/Sungaikolok-Hospital.html
+++ b/Sungaikolok-Hospital.html
@@ -22,12 +22,26 @@
                 ท่านสามารถบริจาคให้กับโรงพยาบาลสุไหงโก-ลกได้ลดหย่อนภาษี2เท่า ไม่เกิน 10% ของรายได้หลังหักค่าใช้จ่ายและลดหย่อนอื่น ๆ
             </p>
             <img src="./images/Sungaikolok-Hospital.jpg" width="100%"" height="100%"" alt="บริจาคให้ โรงพยาบาลสุไหงโก-ลก ลดหย่อน 2 เท่า" ><br>
-            <img src="./images/Sungaikolok-Hospital-QRCode.jpg" width="90%"" height="90%"" alt="บริจาคให้ โรงพยาบาลสุไหงโก-ลก ลดหย่อน 2 เท่า" >
+            <img src="./images/Sungaikolok-Hospital-QRCode.jpg" width="50%" height="50%" alt="บริจาคให้ โรงพยาบาลสุไหงโก-ลก ลดหย่อน 2 เท่า"
+                id="qrPreviewBtn"
+                class="cursor-pointer relative group"
+                style="display:inline-block;position:relative;">
+            <span id="qrHint" class="absolute left-1/2 -translate-x-1/2 mt-2 px-3 py-1 rounded bg-black text-white text-xs opacity-0 group-hover:opacity-100 pointer-events-none transition-opacity duration-200"
+                style="top:100%;white-space:nowrap;z-index:10;">
+                คลิ๊กเพื่อดู QR Code
+            </span>
             <p class="text-gray-700 mb-4">
                 โรงพยาบาลนี้เป็นส่วนหนึ่งที่เราเลือกแต่ยังมีอีกหลายที่ท่านสามารถดูข้อมูลเพิ่มเติมได้ที่
                  <a href="https://ilikeit.info/%E0%B8%9A%E0%B8%A3%E0%B8%B4%E0%B8%88%E0%B8%B2%E0%B8%84%E0%B8%AD%E0%B8%A2%E0%B9%88%E0%B8%B2%E0%B8%87%E0%B9%84%E0%B8%A3-%E0%B9%84%E0%B8%94%E0%B9%89%E0%B8%9A%E0%B8%B8%E0%B8%8D-%E0%B9%84%E0%B8%94%E0%B9%89%E0%B8%A5%E0%B8%94%E0%B8%A0%E0%B8%B2%E0%B8%A9%E0%B8%B5-74040c0aecd7">ข้อมูลเพิ่มเติม</a>
             </p>
             <a href="https://www.scb.co.th/th/personal-banking/other-services/e-donation/e-donationqr.html?page=h63" class="bg-green-500 text-white px-6 py-2 rounded-lg hover:bg-green-600">ร่วมบริจาค</a>
+        </div>
+        <!-- QR Code Preview Modal -->
+        <div id="qrPreviewModal" class="fixed inset-0 bg-black bg-opacity-60 flex items-center justify-center z-50 hidden">
+            <div class="bg-white rounded-lg shadow-lg p-4 relative max-w-xs w-full">
+                <button id="closeQrPreview" class="absolute top-2 right-2 text-gray-500 hover:text-gray-700 text-2xl">&times;</button>
+                <img src="./images/Sungaikolok-Hospital-QRCode.jpg" alt="QR Code Preview" class="mx-auto w-full h-auto">
+            </div>
         </div>
     </section>
 
@@ -37,5 +51,26 @@
             <p>&copy; 2024 บริจาคได้บุญ. All rights reserved.</p>
         </div>
     </footer>
+    <script>
+        // Show QR preview modal
+        document.getElementById('qrPreviewBtn').onclick = function() {
+            document.getElementById('qrPreviewModal').classList.remove('hidden');
+        };
+        // Hide QR preview modal
+        document.getElementById('closeQrPreview').onclick = function() {
+            document.getElementById('qrPreviewModal').classList.add('hidden');
+        };
+        // Close QR preview modal when clicking outside the modal content
+        document.getElementById('qrPreviewModal').onclick = function(e) {
+            if (e.target === this) {
+                this.classList.add('hidden');
+            }
+        };
+        // Tooltip show/hide for browsers that don't support :hover on span
+        var qrBtn = document.getElementById('qrPreviewBtn');
+        var qrHint = document.getElementById('qrHint');
+        qrBtn.onmouseenter = function() { qrHint.style.opacity = 1; };
+        qrBtn.onmouseleave = function() { qrHint.style.opacity = 0; };
+    </script>
 </body>
 </html>
